# physics

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: release.yml  tests.yml
bindings/: CMakeLists.txt  bindings.cpp
examples/: README.md  orbit.py  three_balls.py
include/physics/: constants.hpp
include/physics/formulas/: gravity.hpp  mech.hpp
include/physics/object/: object.hpp  surface.hpp
include/physics/simulator/: simulator.hpp
include/physics/units/: quantity.hpp
include/physics/vector/: vector.hpp
python/: .gitignore  pyproject.toml  test_import.py
python/physics/: __init__.py
python/scripts/: generate_stubs.py
src/physics/formulas/: gravity.cpp  mech.cpp
src/physics/object/: object.cpp
src/physics/simulator/: simulator.cpp
tests/: CMakeLists.txt  test_collisions.cpp  test_formulas.cpp  test_friction.cpp  test_obj_gravity.cpp  test_vector.cpp
