[project]
name = "physics"
version = "0.1.6"
description = "Package for physics written in C++"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []
authors = [{ name="UltraGeoPro", email="dev@ultrageopro.ru" }]

[build-system]
requires = ["scikit-build-core>=0.10", "pybind11>=2.11", "pybind11-stubgen"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
build-dir = "build"
wheel.packages = ["python/physics"]

[tool.scikit-build.cmake.define]
PHYSICS_BUILD_TESTS = "OFF"
