[project]
name = "physics"
version = "0.1.3"
description = "Package for physics written in C++"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []
authors = [{ name="UltraGeoPro", email="dev@ultrageopro.ru" }]

[build-system]
requires = ["setuptools", "wheel", "scikit-build-core>=0.10", "pybind11>=2.11"]
build-backend = "setuptools.build_meta"

[tool.scikit-build]
wheel.packages = ["python/physics"]
cmake.minimum-version = "3.22"
cmake.build-type = "Release"